<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jamba Address Book</string>
    <string name="no_contacts">No Contacts</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_contact">Save Contact</string>
    <string name="hint_name">Name (Required)</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city_state">City, State and Zip</string>
    <string name="label_name">Name:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_address">Address</string>
    <string name="label_street">Street:</string>
    <string name="label_city_state">City,State,ZIP:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>
    <string name="ok">OK</string>
    <string name="validation_message">A name is required</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

</resources>